<resources>
    <string name="app_name">WeatherApp</string>
    <string name="title_activity_second">SecondActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="unit_header">Unit</string>
    <string name="display_header">Display</string>
    <string name="localization_header">Localization</string>
    <string name="connect_header">Connect</string>
    <string name="wifi_header">STM WiFi Connection</string>

    <!-- Unit Preferences -->
    <string name="unit_title">Choose unit</string>
    <string name="unit_summary_on">Fahrenheit</string>
    <string name="unit_summary_off">Celsius</string>

    <!-- Display Preferences -->
    <string name="display_title">Display on STM</string>
    <string name="display_summary_on">STM data</string>
    <string name="display_summary_off">Web data</string>

    <!-- Connect Preferences -->
    <string name="connect_title">Connection</string>
    <string name="connect_summary_on">Connect</string>
    <string name="connect_summary_off">Disconnect</string>

    <!-- Connection status -->
    <string name="try_again">Reconnect</string>

    <!-- Connect STM -->
    <string name="password_title">Password</string>
    <string name="ssid_title">SSID</string>

</resources>
