<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <!--
    <PreferenceCategory app:title="messages_header">

        <EditTextPreference
            app:key="signature"
            app:title="signature_title"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="reply"
            app:entries="@array/reply_entries"
            app:entryValues="@array/reply_values"
            app:key="reply"
            app:title="reply_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/connect_header">

        <SwitchPreferenceCompat
            app:key="Connect"
            app:summaryOff="@string/connect_summary_off"
            app:summaryOn="@string/connect_summary_on"
            app:title="@string/connect_title" />

    </PreferenceCategory>
    -->

    <PreferenceCategory app:title="@string/unit_header">

        <SwitchPreferenceCompat
            app:key="Unit"
            app:summaryOff="@string/unit_summary_off"
            app:summaryOn="@string/unit_summary_on"
            app:title="@string/unit_title" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/display_header">

        <SwitchPreferenceCompat
            app:key="Display"
            app:summaryOff="@string/display_summary_off"
            app:summaryOn="@string/display_summary_on"
            app:title="@string/display_title" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/localization_header">

        <EditTextPreference
            app:key="Localization"
            app:title="Type your localization:"
            app:defaultValue="your localization"
            app:summary=""
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="WiFi Connection">

        <EditTextPreference
            app:key="ssid_key"
            app:title="@string/ssid_title"
            app:defaultValue="SSID"
            app:summary=""
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:key="password_key"
            app:title="@string/password_title"
            app:summary="***********" />

    </PreferenceCategory>

    <PreferenceCategory
            app:key="help_category"
            app:title="Help">

            <Preference
                app:key="feedback"
                app:summary="weatherx@private.com"
                app:title="Report technical issues or suggestions on e-mail"/>

    </PreferenceCategory>


    </PreferenceScreen>
